--- a/Baldperm.css
+++ b/Baldperm.css
@@ -18,7 +18,7 @@ h3 {
 }
 h4 {
 				font-family: "Times New Roman", Times, serif;
-				font-size: 48px;
+				font-size: 48pt;
 				font-weight: bold;
 				text-align: center;
 }
